# Project1-Middleware

./: .gitignore  CMakeLists.txt  README.md  RestServer  auth_test  build_all.sh  client.py  main.cpp  node_discover  node_response  test_utils
include/auth/: AuthService.hpp
include/cluster/: DiscoveryService.hpp  FailoverManager.hpp  HostReceiver.hpp  NodeAnnouncer.hpp  ReplicationManager.hpp  ReplicationServiceImpl.hpp
include/core/: MessageHandler.hpp  QueueManager.hpp  TopicManager.hpp
include/networking/: GrpcServer.hpp  RestServer.hpp
include/utils/: Config.hpp  Logger.hpp  NetworksUtils.hpp
proto/: mom.proto  replication.proto
src/: CMakeLists.txt  auth_test.cpp  main.cpp  main2.cpp  test_utils.cpp
src/auth/: AuthService.cpp
src/cluster/: DiscoveryService.cpp  FailoverManager.cpp  HostReceiver.cpp  NodeAnnouncer.cpp  ReplicationManager.cpp  ReplicationServiceImpl.cpp
src/core/: MessageHandler.cpp  QueueManager.cpp  TopicManager.cpp
src/networking/: GrpcServer.cpp  RestServer.cpp
src/utils/: Config.cpp  Logger.cpp  NetworksUtils.cpp
test/: auth_test.cpp  discovery_test.cpp  node_discover.cpp  node_response.cpp
